@@ -4,3 +4,5 @@
 # This configuration file is for development only and should NOT be used
 # in production. For example configuration, see the Trino documentation.
 #
+
+--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
